--- a/index.html
+++ b/index.html
@@ -13,11 +13,19 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header class="head_bar">
-      <h1 class="head_bar__title">Bookshelf Apps</h1>
+      <h3 class="head_bar__title">Bookshelf Apps</h3>
+      <form id="searchBook">
+        <label for="searchBookTitle">Search Judul</label>
+        <input id="searchBookTitle" type="text" />
+      </form>
     </header>
     <main>
       <section class="input_section">
@@ -40,17 +48,8 @@
             <input id="inputBookIsComplete" type="checkbox" />
           </div>
           <button id="bookSubmit" type="submit">
-            Masukkan Buku ke rak <span>Belum selesai dibaca</span>
+            <b>Masukkan Buku ke rak</b>
           </button>
-        </form>
-      </section>
-
-      <section class="search_section">
-        <h2>Cari Buku (Opsional)</h2>
-        <form id="searchBook">
-          <label for="searchBookTitle">Judul</label>
-          <input id="searchBookTitle" type="text" />
-          <button id="searchSubmit" type="submit">Cari</button>
         </form>
       </section>
 
